# Entrepreneur_AI_Assistant

./: .env  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.data/: memory.json
src/: graph.py  main.py  memory.py  state.py  visualize_graph.py
src/llm/: gemini_llm.py  groq_llm.py
src/memory/: memory_store.py
src/nodes/: business_model_node.py  business_plan_node.py  clarifier_node.py  competitor_analysis_node.py  decision_node.py  followup_node.py  funding_advisor_node.py  goal_node.py  growth_node.py  idea_node.py  idea_selector_node.py  market_analysis_node.py  market_node.py  market_research_node.py  marketing_node.py  model_suggestion_node.py  optional_info_node.py  plan_node.py  priority_node.py  response_node.py  risk_assessment_node.py  risk_node.py  schedule_node.py  validation_node.py
tests/: test_idea_node.py  test_nodes.py
