[tool.poetry]
name = "Entrepreneur_AI_Assistant"
version = "0.1.0"
description = "LangGraph-style LLM-driven assistant for entrepreneurs. Helps users generate startup ideas, plan actionable steps, prioritize tasks, and schedule timelines using a modern LLM workflow."
authors = ["Henok Yoseph <henok@example.com>"]
readme = "README.md"
packages = [{ include = "src" }]
python = ">=3.11"

[tool.poetry.dependencies]
python = ">=3.11"
pydantic = "^2.0"
python-dateutil = "^2.8"
langchain = "^0.3.25"
langgraph = "^0.4.8"
python-dotenv = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-cov = "^4.0"

[tool.poetry.scripts]
entrepreneur-ai = "src.main:main"

[tool.poetry.urls]
Source = "https://github.com/aprilyab/Entrepreneur_AI_Assistant"
